--- a/app/views/shared/_admin_nav.html.slim
+++ b/app/views/shared/_admin_nav.html.slim
@@ -8,6 +8,14 @@ nav class="navbar navbar-expand-lg navbar-dark bg-danger"
 
     ul class="navbar-nav mr-auto mt-2 mt-lg-0"
 
+      li class="nav-item dropdown"
+        a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" Actions
+        div class="dropdown-menu" aria-labelledby="navbarDropdown"
+          a class="dropdown-item" href="#{new_admin_project_path}" #{octicon "plus"} Add project
+          a class="dropdown-item" href="#" Another action
+          div class="dropdown-divider"
+          a class="dropdown-item" href="#" Something else here
+
       li class="nav-item active"
         a class="nav-link" href="#"
 
