--- a/app/views/admin/projects/index.html.slim
+++ b/app/views/admin/projects/index.html.slim
@@ -6,6 +6,6 @@ div class="row justify-content-center mt-3"
   div class="card mt-3 auto"
     div class="card-header"
       b = project.name
-    div class="card-body"   = raw project.description
+    div class="card-body"   = raw project.description.truncate(500, separator: ' ')
     div class="card-footer d-flex flex-row-reverse"
       span class="text-muted date-created" = project.created_at.strftime('%B %e at %l:%M %p')
