--- a/app/views/shared/_admin_nav.html.slim
+++ b/app/views/shared/_admin_nav.html.slim
@@ -1,5 +1,5 @@
 nav class="navbar navbar-expand-lg navbar-dark bg-danger"
-  = link_to 'TimeTracker | Admin Panel', root_path, class: 'navbar-brand'
+  = link_to 'TimeTracker | Admin Panel', admin_projects_path, class: 'navbar-brand'
 
   button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"
     span class="navbar-toggler-icon"
