--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -4,7 +4,7 @@ div class="row justify-content-center mt-3"
   h2 Sign Up
 
 div class="row justify-content-center mt-3"
-  div class="card col-6 pt-3"
+  div class="card col-6 pt-3 pb-3"
 
     = bootstrap_form_for @user do |form|
       = form.text_field :name
