--- a/app/views/admin/projects/index.html.slim
+++ b/app/views/admin/projects/index.html.slim
@@ -5,7 +5,7 @@ div class="row justify-content-center mt-3"
 
   div class="card mt-3 auto"
     div class="card-header"
-      b = project.name
+      b = link_to project.name, admin_project_path(project)
     div class="card-body"   = raw project.description.truncate(500, separator: ' ')
     div class="card-footer d-flex flex-row-reverse"
       span class="text-muted date-created" = project.created_at.strftime('%B %e at %l:%M %p')
