--- a/app/views/admin/projects/show.html.slim
+++ b/app/views/admin/projects/show.html.slim
@@ -1,1 +1,10 @@
-h1 = @project.name
+div class="row justify-content-center mt-3"
+  h1 = @project.name
+
+div class="card mt-3 auto"
+  div class="card-header d-flex flex-row-reverse"
+    = link_to "Edit", edit_admin_project_path(@project), class: "btn btn-sm btn-primary mr-3"
+    = link_to "Delete", admin_project_path(@project), class: "btn btn-sm btn-danger mr-3", data: { confirm: "Are you sure?" }, method: :delete
+  div class="card-body" = raw @project.description
+  div class="card-footer d-flex flex-row-reverse"
+    span class="text-muted date-created" = @project.created_at.strftime('%B %e at %l:%M %p')
