--- a/app/views/admin/projects/new.html.slim
+++ b/app/views/admin/projects/new.html.slim
@@ -1,14 +1,5 @@
 div class="row justify-content-center mt-3"
   h2 New Project
 
-div class="row justify-content-center mt-3"
-  div class="card col-10 pt-3"
+= render 'form', action: "Create"
 
-    = bootstrap_form_with model: [:admin, @project], local: true do |form|
-
-      = form.text_field :name
-      = form.text_area :description, class: "tinymce", :rows => 40, :cols => 120
-
-      = form.submit "Create project", class: "btn btn-success"
-
-= tinymce
