--- a/app/views/admin/projects/index.html.slim
+++ b/app/views/admin/projects/index.html.slim
@@ -3,3 +3,5 @@ div class="row justify-content-center mt-3"
 
 = render partial: 'projects/project', collection: @projects
 
+div class="row justify-content-center mt-3"
+  = will_paginate @projects, list_classes: %w(pagination justify-content-end)
