Refactor ProjectsController, update views

--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -10,7 +10,7 @@ html
 
   body
 
-    = render 'shared/admin_nav'
+    = render 'shared/admin/admin_nav'
 
     .container
       = render 'shared/flash'
