--- a/app/views/admin/projects/show.html.slim
+++ b/app/views/admin/projects/show.html.slim
@@ -2,30 +2,21 @@ div class="row justify-content-center mt-3"
   h1 = @project.name
 
 div class="card mt-3 auto"
-  div class="card-header d-flex flex-row-reverse"
-    = link_to "Edit", edit_admin_project_path(@project), class: "btn btn-sm btn-primary mr-3"
-    = link_to "Delete", admin_project_path(@project), class: "btn btn-sm btn-danger mr-3", data: { confirm: "Are you sure?" }, method: :delete
-  div class="card-body" = raw @project.description
+  div class="card-header"
+    ul class="nav nav-tabs card-header-tabs" id="pojectTab" role="tablist"
+      li class="nav-item"
+        = link_to "Description", admin_project_path(@project), class: "nav-link active"
+      li class="nav-item"
+        = link_to "Users", admin_project_projects_users_path(@project), class: "nav-link"
+      li class="nav-item"
+        = link_to "Tasks", "#", class: "nav-link"
 
 
-  div class="card m-3 auto"
-    div class="card-header" Assign users to the project
-    div class="card-body"
-      div class="input-group"
-        = bootstrap_form_with url: assign_user_admin_project_path(@project), class: "form-inline" do |form|
-          = form.select(:assign_user, @users_array, { hide_label: true, prompt: 'Select user to assign to the project...'}, { class: "form-control-sm" })
-          = form.submit 'Assign user', class: "m-3 btn btn-sm btn-success"
+  div class="card-body pane"
+    = raw @project.description
 
-    - if @project.users.any?
-      div class="card mr-3 ml-3 user-assign"
-        ul class="list-group list-group-flush"
-          li class="list-group-item active" Assigned users
-          - @project.users.each do |user|
-            li class="list-group-item"
-              = user.name + ' ' + user.surname
-              |
-              = link_to 'Unassign user', assign_user_admin_project_path(@project, assign_user: user.id), class: "btn btn-sm btn-danger float-right", method: :delete
-
-  div class="card-footer d-flex flex-row-reverse"
+  div class="card-footer"
+    = link_to "Edit", edit_admin_project_path(@project), class: "btn btn-sm btn-info mr-3 float-right"
+    = link_to "Delete", admin_project_path(@project), class: "btn btn-sm btn-danger mr-3 float-right", data: { confirm: "Are you sure?" }, method: :delete
     span class="text-muted date-created" = @project.created_at.strftime('%B %e at %l:%M %p')
 
