--- a/app/views/projects/_project.html.slim
+++ b/app/views/projects/_project.html.slim
@@ -8,7 +8,8 @@ div class="card mt-3 auto"
     = raw project.description.truncate(500, separator: ' ')
 
   div class="card-footer"
-    = link_to "Edit", edit_admin_project_path(project), class: "btn btn-sm btn-info mr-3 float-right"
+    = link_to "Edit description", edit_admin_project_path(project), class: "btn btn-sm btn-info mr-3 float-right"
+    = link_to "Manage members", admin_project_projects_users_path(project), class: "btn btn-sm btn-warning mr-3 float-right"
     = link_to "Delete", admin_project_path(project), class: "btn btn-sm btn-danger mr-3 float-right", data: { confirm: "Are you sure?" }, method: :delete
 
     div class="text-muted date-created" = project.created_at.strftime('%B %e at %l:%M %p')
