--- a/app/views/admin/projects/edit.html.slim
+++ b/app/views/admin/projects/edit.html.slim
@@ -1,10 +1,7 @@
+= content_for :pane_content
+  h5 class="card-title" Edit project
+  |
+  = render 'form', action: "Update"
 
-
-div class="row justify-content-center mt-3"
-  h2 Edit Project
-
-div class="row justify-content-center mt-3"
-  h5 = @project.name
-
-= render 'form', action: "Update"
+= render template: 'layouts/project_card'
 
