--- a/app/views/admin/projects/index.html.slim
+++ b/app/views/admin/projects/index.html.slim
@@ -1,7 +1,7 @@
 div class="row justify-content-center mt-3"
   h2 Projects List
 
-= render partial: 'projects/project', collection: @projects
+= render @projects
 
 div class="row justify-content-center mt-3"
   = will_paginate @projects, list_classes: %w(pagination justify-content-end)
