Modify active_link helper

--- a/app/views/layouts/project_card.html.slim
+++ b/app/views/layouts/project_card.html.slim
@@ -5,11 +5,11 @@ div class="card mt-3 auto"
   div class="card-header"
     ul class="nav nav-tabs card-header-tabs" id="pojectTab" role="tablist"
       li class="nav-item"
-        = link_to "Description", admin_project_path(@project), class: "nav-link #{active_link(:projects)}"
+        = link_to "Description", admin_project_path(@project), class: "nav-link #{active_link(controller: :projects)}"
       li class="nav-item"
-        = link_to "Members", admin_project_projects_users_path(@project), class: "nav-link #{active_link(:projects_users)}"
+        = link_to "Members", admin_project_projects_users_path(@project), class: "nav-link #{active_link(controller: :projects_users)}"
       li class="nav-item"
-        = link_to "Tasks", admin_project_tasks_path(@project), class: "nav-link #{active_link(:tasks)}"
+        = link_to "Tasks", admin_project_tasks_path(@project), class: "nav-link #{active_link(controller: :tasks)}"
 
 
   div class="card-body pane"
