--- a/app/views/admin/tasks/show.html.slim
+++ b/app/views/admin/tasks/show.html.slim
@@ -1,9 +1,16 @@
 = content_for :pane_content
+  div class="row justify-content-center mt-3"
+    h2 = @task.name
   .row
-    div class="card m-3 auto task-#{@task.id} w-100"
+    div class="card m-3 auto w-100"
       div class="card-header"
-        b = @task.name
-        span class="badge badge-secondary ml-2" #{@task.author}
+        ul class="nav nav-tabs card-header-tabs" id="pojectTab" role="tablist"
+          li class="nav-item"
+            = link_to "Description", admin_task_path(@project), class: "nav-link #{active_link(controller: :tasks)}"
+          li class="nav-item"
+            = link_to "Summary", admin_project_projects_users_path(@project), class: "nav-link #{active_link(controller: :projects_users)}"
+          li class="nav-item"
+            = link_to "Time log", admin_project_tasks_path(@project), class: "nav-link #{active_link(controller: :time_logs)}"
 
       div class="card-body"
 
