Add summary page for task

--- a/app/views/admin/tasks/_edit_form.html.slim
+++ b/app/views/admin/tasks/_edit_form.html.slim
@@ -20,6 +20,6 @@
           = form.radio_button :priority, key.to_s, label: key.to_s
       = form.number_field :complete_hours, class: "form-control-sm col-1"
 
-      = form.submit "Edit task", class: "btn btn-success"
+      = form.submit "Save task", class: "btn btn-success"
 
 = tinymce
