Add badges for task_type and priority

--- a/app/views/admin/tasks/_task.html.slim
+++ b/app/views/admin/tasks/_task.html.slim
@@ -4,6 +4,9 @@
       b = link_to task.name, admin_task_path(task), class: "mr-2"
       span class="badge badge-secondary" #{task.author}
 
+      - task.badges.each do |badge|
+        = badge_for(badge)
+
     div class="card-body"
 
       = raw task.description
@@ -11,12 +14,17 @@
     div class="card-footer"
       = link_to "Delete task", "#{admin_task_path(task)}", class: "btn btn-sm btn-danger mr-3 float-right", data: { confirm: "Are you sure?" }, method: :delete, remote: true
       = link_to "Edit task", "#{edit_admin_task_path(task)}", class: "btn btn-sm btn-info mr-3 float-right"
-      div class="dropdown show"
-        a class="btn btn-warning dropdown-toggle btn-sm mr-3 float-right" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" = !!task.performer ? task.performer : "Assign performer"
 
+      - if task.performer
+        = link_to "Unassign performer: #{task.performer}", "#{admin_task_task_performer_path(task)}", class: "btn btn-sm btn-danger mr-3 float-right", data: {confirm: "Are you sure?"}, method: :delete
 
-        div class="dropdown-menu" aria-labelledby="dropdownMenuLink"
-          - task.project.users.each do |user|
-            a class="dropdown-item" href="#" #{user}
+      - else
+
+        div class="dropdown show"
+          a class="btn btn-warning dropdown-toggle btn-sm mr-3 float-right" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" = !!task.performer ? task.performer : "Assign performer"
+
+          div class="dropdown-menu" aria-labelledby="dropdownMenuLink"
+            - task.project.users.each do |user|
+              = link_to "#{user}", admin_task_task_performer_path(task, performer_id: user.id), class: "dropdown-item", method: :post
 
       div class="text-muted" = task.created_at.strftime('%B %e at %l:%M %p')
