--- a/app/views/admin/tasks/new.html.slim
+++ b/app/views/admin/tasks/new.html.slim
@@ -1,6 +1,6 @@
 = content_for :pane_content
   .errors
     = render 'shared/errors', resource: @task
-  = render 'form'
+  = render 'new_form'
 
 = render template: 'layouts/project_card'
