--- a/app/views/admin/tasks/_edit_form.html.slim
+++ b/app/views/admin/tasks/_edit_form.html.slim
@@ -11,9 +11,9 @@
         .col
           = form.date_field :due_date, class: "form-control-sm"
 
-      = form.form_group :types, label: { text: "Select task type" } do
-        - Task::task_types.each do |key, value|
-          = form.radio_button :task_type, key.to_s, label: key.to_s
+      = form.form_group :task_type, label: { text: "Select task type" } do
+        - Task::task_types.each do |type|
+          = form.radio_button :task_type, type[0], label: type[0]
 
       = form.form_group :priority, label: { text: "Select task priority" } do
         - Task::priorities.each do |key, value|
