--- a/app/views/admin/tasks/_new_form.html.slim
+++ b/app/views/admin/tasks/_new_form.html.slim
@@ -11,7 +11,7 @@
         .col
           = form.date_field :due_date, class: "form-control-sm"
 
-      = form.form_group :types, label: { text: "Select task type" } do
+      = form.form_group :task_type, label: { text: "Select task type" } do
         - Task::task_types.each do |key, value|
           = form.radio_button :task_type, key.to_s, label: key.to_s
 
