--- a/app/views/layouts/task.html.slim
+++ b/app/views/layouts/task.html.slim
@@ -19,13 +19,18 @@
       div class="card-footer"
         = link_to "Delete task", "#{admin_task_path(@task)}", class: "btn btn-sm btn-danger mr-3 float-right", data: {confirm: "Are you sure?"}, method: :delete, remote: true
         = link_to "Edit task", "#{edit_admin_task_path(@task)}", class: "btn btn-sm btn-info mr-3 float-right"
-        div class="dropdown show"
-          a class="btn btn-warning dropdown-toggle btn-sm mr-3 float-right" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" = !!@task.performer ? @task.performer : "Assign performer"
 
+        - if @task.performer
+          = link_to "Unassign performer: #{@task.performer}", "#{admin_task_task_performer_path(@task)}", class: "btn btn-sm btn-danger mr-3 float-right", data: {confirm: "Are you sure?"}, method: :delete
 
-          div class="dropdown-menu" aria-labelledby="dropdownMenuLink"
-            - @task.project.users.each do |user|
-              a class="dropdown-item" href="#" #{user}
+        - else
+
+          div class="dropdown show"
+            a class="btn btn-warning dropdown-toggle btn-sm mr-3 float-right" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" = !!@task.performer ? @task.performer : "Assign performer"
+
+            div class="dropdown-menu" aria-labelledby="dropdownMenuLink"
+              - @task.project.users.each do |user|
+                = link_to "#{user}", admin_task_task_performer_path(@task, performer_id: user.id), class: "dropdown-item", method: :post
 
         div class="text-muted" = @task.created_at.strftime('%B %e at %l:%M %p')
 
