--- a/app/views/admin/tasks/_task.html.slim
+++ b/app/views/admin/tasks/_task.html.slim
@@ -16,7 +16,7 @@
       = link_to "Edit task", "#{edit_admin_task_path(task)}", class: "btn btn-sm btn-info mr-3 float-right"
 
       - if task.performer
-        = link_to "Unassign performer: #{task.performer}", "#{admin_task_task_performer_path(task)}", class: "btn btn-sm btn-danger mr-3 float-right", data: {confirm: "Are you sure?"}, method: :delete
+        = link_to "Unassign performer: #{task.performer}", "#{admin_task_task_performer_path(task)}", class: "btn btn-sm btn-warning mr-3 float-right", data: {confirm: "Are you sure?"}, method: :delete
 
       - else
 
