--- a/app/views/layouts/task.html.slim
+++ b/app/views/layouts/task.html.slim
@@ -4,6 +4,9 @@
   .row
     div class="card m-3 auto w-100"
       div class="card-header"
+        - @task.badges.each do |badge|
+          = badge_for(badge)
+
         ul class="nav nav-tabs card-header-tabs" id="pojectTab" role="tablist"
           li class="nav-item"
             = link_to "Description", admin_task_path(@task), class: "nav-link #{active_link(controller: :tasks, action: :show)}"
@@ -21,7 +24,7 @@
         = link_to "Edit task", "#{edit_admin_task_path(@task)}", class: "btn btn-sm btn-info mr-3 float-right"
 
         - if @task.performer
-          = link_to "Unassign performer: #{@task.performer}", "#{admin_task_task_performer_path(@task)}", class: "btn btn-sm btn-danger mr-3 float-right", data: {confirm: "Are you sure?"}, method: :delete
+          = link_to "Unassign performer: #{@task.performer}", "#{admin_task_task_performer_path(@task)}", class: "btn btn-sm btn-warning mr-3 float-right", data: {confirm: "Are you sure?"}, method: :delete
 
         - else
 
