--- a/app/views/layouts/task_card.html.slim
+++ b/app/views/layouts/task_card.html.slim
@@ -13,7 +13,7 @@
           li class="nav-item"
             = link_to "Summary", summary_admin_task_path(@task), class: "nav-link #{active_link(controller: :tasks, action: :summary)}"
           li class="nav-item"
-            = link_to "Time log", admin_project_tasks_path(@project), class: "nav-link #{active_link(controller: :time_logs)}"
+            = link_to "Time log",  admin_task_time_logs_path(@task), class: "nav-link #{active_link(controller: :time_logs)}"
 
       div class="card-body"
 
