--- a/app/views/layouts/project_card.html.slim
+++ b/app/views/layouts/project_card.html.slim
@@ -10,6 +10,8 @@ div class="card mt-3 auto"
         = link_to "Members", admin_project_projects_users_path(@project), class: "nav-link #{active_link(controller: :projects_users)}"
       li class="nav-item"
         = link_to "Tasks", admin_project_tasks_path(@project), class: "nav-link #{active_link(controller: :tasks)}"
+      li class="nav-item"
+        = link_to "Comments", admin_project_comments_path(@project), class: "nav-link #{active_link(controller: :comments)}"
 
 
   div class="card-body pane"
