--- a/app/views/layouts/task_card.html.slim
+++ b/app/views/layouts/task_card.html.slim
@@ -2,7 +2,7 @@
   div class="row justify-content-center mt-3"
     h2 = @task.name
   .row
-    div class="card m-3 auto w-100"
+    div class="card m-3 auto w-100 task-#{task.id}"
       div class="card-header"
         - @task.badges.each do |badge|
           = badge_for(badge)
