--- a/app/views/admin/tasks/_task.html.slim
+++ b/app/views/admin/tasks/_task.html.slim
@@ -1,5 +1,5 @@
 .row
-  div class="card m-3 auto task-#{task.id} w-100 task-header"
+  div class="card m-3 auto task-#{task.id} w-100 task-card"
     div class="card-header"
       b = link_to task.name, admin_task_path(task), class: "mr-2"
       span class="badge badge-secondary" #{task.author}
