--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,5 +1,5 @@
 div class="row"
-  div class="card float-right w-100 mr-3 ml-3 mt-1"
+  div class="card float-right w-100 mr-3 ml-3 mt-1 comment"
     div class="card-header text-muted" #{comment.author} wrote:
     .card-body
       = comment.body
