--- a/app/views/projects/_form.html.slim
+++ b/app/views/projects/_form.html.slim
@@ -2,7 +2,7 @@ div class="row justify-content-center mt-3"
   div class="card col-10 pt-3"
     = render 'shared/errors', resource: @project
 
-    = bootstrap_form_with model: [:admin, @project] do |form|
+    = bootstrap_form_with model: [@project] do |form|
 
       = form.text_field :name
       = form.text_area :description, class: "tinymce", rows: 20, cols: 60
