--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -2,7 +2,7 @@
   div class="row"
     = link_to "Add task to the project", new_admin_project_task_path, class: "btn btn-sm btn-success ml-3 float-right add-task-btn"
   .errors
-  = render 'admin/tasks/new_form'
+  = render 'new_form'
   = render @tasks
 
 = render template: 'layouts/project_card'
