Update specs to pass

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html
 
   body
 
-    - if current_user.admin?
+    - if current_user && current_user.admin?
       = render 'shared/admin/admin_nav'
     - else
       = render 'shared/nav'
