--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,8 +1,10 @@
 = content_for :pane_content do
-  div class="row"
-    = link_to "Add task to the project", new_admin_project_task_path, class: "btn btn-sm btn-success ml-3 float-right add-task-btn"
-  .errors
-  = render 'new_form'
+  - if user_admin?
+    div class="row"
+      = link_to "Add task to the project", new_project_task_path, class: "btn btn-sm btn-success ml-3 float-right add-task-btn"
+    .errors
+    = render 'new_form'
+
   = render @tasks
 
 = render template: 'layouts/project_card'
