--- a/app/views/layouts/task_card.html.slim
+++ b/app/views/layouts/task_card.html.slim
@@ -20,7 +20,8 @@
         = yield :task_content
 
       div class="card-footer"
-        = render 'shared/admin/task_card_buttons' if user_admin?
+        = link_to "Edit task", "#{edit_task_path(@task)}", class: "btn btn-sm btn-info mr-3 float-right"
+        = render('shared/admin/task_card_buttons', task: @task) if user_admin?
 
         div class="text-muted" = @task.created_at.strftime('%B %e at %l:%M %p')
 
