--- a/app/views/shared/admin/_admin_nav.html.slim
+++ b/app/views/shared/admin/_admin_nav.html.slim
@@ -1,5 +1,5 @@
 nav class="navbar navbar-expand-lg navbar-dark bg-danger"
-  = link_to 'TimeTracker | Admin Panel', admin_projects_path, class: 'navbar-brand'
+  = link_to 'TimeTracker | Admin Panel', projects_path, class: 'navbar-brand'
 
   button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"
     span class="navbar-toggler-icon"
@@ -8,26 +8,12 @@ nav class="navbar navbar-expand-lg navbar-dark bg-danger"
 
     ul class="navbar-nav mr-auto mt-2 mt-lg-0"
 
-      li class="nav-item dropdown"
-        a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" Actions
-        div class="dropdown-menu" aria-labelledby="navbarDropdown"
-          a class="dropdown-item" href="#{new_admin_project_path}" #{octicon "plus"} Add project
-          a class="dropdown-item" href="#" Another action
-          div class="dropdown-divider"
-          a class="dropdown-item" href="#" Something else here
+      li class="nav-item active"
+        = link_to "New project", new_project_path, class: "nav-link"
 
       li class="nav-item active"
-        a class="nav-link" href="#"
+        = link_to "Projects", projects_path, class: "nav-link"
 
-      - unless current_user
 
-        li class="nav-item"
-          a class="nav-link active" href="#{new_user_path}" = 'Sign Up'
-
-        li class="nav-item"
-          a class="nav-link active" href="#{login_path}" = 'Log In'
-
-      - else
-
-        li class="nav-item"
-          = link_to 'Logout', logout_path, method: :delete, class: 'nav-link active'
+      li class="nav-item"
+        = link_to 'Logout', logout_path, method: :delete, class: 'nav-link active'
