--- a/app/views/layouts/project_card.html.slim
+++ b/app/views/layouts/project_card.html.slim
@@ -1,5 +1,5 @@
 div class="row justify-content-center mt-3"
-  h1 = @project.name
+  h1.project-name = @project.name
 
 div class="card mt-3 auto"
   div class="card-header"
