--- a/app/views/projects/_form.html.slim
+++ b/app/views/projects/_form.html.slim
@@ -1,6 +1,7 @@
 div class="row justify-content-center mt-3"
   div class="card col-10 pt-3"
-    = render 'shared/errors', resource: @project
+    .project-errors
+      = render 'shared/errors', resource: @project
 
     = bootstrap_form_with model: [@project] do |form|
 
