--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -1,5 +1,8 @@
 nav class="navbar navbar-expand-lg navbar-dark bg-dark"
-  = link_to 'TimeTracker', root_path, class: 'navbar-brand'
+  - unless current_user
+    = link_to 'TimeTracker', root_path, class: 'navbar-brand'
+  - else
+    = link_to 'TimeTracker', projects_path, class: 'navbar-brand'
 
   button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"
     span class="navbar-toggler-icon"
