--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -3,5 +3,5 @@
   |
   = render 'form', action: "Update"
 
-= render template: 'layouts/project_card'
+= render template: 'layouts/project_card', locals: { project: @project }
 
