--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -7,4 +7,4 @@
 
   = render @tasks
 
-= render template: 'layouts/project_card'
+= render template: 'layouts/project_card', locals: { project: @project }
